<package>
  <name>octomap_ros</name>
  <version>0.4.1</version>
  <description>
    octomap_ros provides conversion functions between ROS and OctoMap's native types.
    This enables a convenvient use of the octomap package in ROS.
    
  </description>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/octomap_ros</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
